--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@
 
         <!-- Header / Hero -->
         <div class="card header">
-            <div class="avatar">KM</div>
+            <div class="avatar"><img src="https://avatars.githubusercontent.com/u/7344164?v=4"></div>
             <div style="flex:1">
                 <h1>Hi, I'm <strong>Kazi Mynul Islam</strong></h1>
                 <p class="lead">System Analyst | Full Stack Developer | Project Manager — 14+ years experience in
