update pdf path

--- a/index.html
+++ b/index.html
@@ -372,7 +372,7 @@
 
     <script>
         function downloadCV() {
-            const cvPath = '/cv-kazimynulislam.pdf';
+            const cvPath = 'https://mynulleo.github.io/mynulleo/cv-kazimynulislam.pdf';
             window.open(cvPath, '_blank');
         }
     </script>
